plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.asciidoctor.jvm.convert' version '3.3.2'
}


ext {
    snippetsDir = layout.buildDirectory.dir('generated-snippets').get().asFile
}

group = 'com'
version = '0.0.1-SNAPSHOT'
description = 'pulse'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    runtimeOnly 'com.mysql:mysql-connector-j'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    outputs.dir snippetsDir
    useJUnitPlatform()
    jvmArgs(
        '-XX:+EnableDynamicAgentLoading'
    )
}

asciidoctor {
    inputs.dir snippetsDir
    dependsOn test
    baseDirFollowsSourceFile()
    attributes 'snippets': snippetsDir
    outputDir layout.buildDirectory.dir('docs/asciidoc').get().asFile
}

tasks.register('generateDocs', Copy) {
    dependsOn asciidoctor
    group = 'documentation'
    from layout.buildDirectory.dir('docs/asciidoc')
    into layout.buildDirectory.dir('resources/main/static/docs')
}

bootJar {
    if (!project.hasProperty('production')) {
        dependsOn asciidoctor
        from(layout.buildDirectory.dir('docs/asciidoc')) {
            into 'static/docs'
        }
    }
}
